Fix for the font-size and spacing on the header bar; Fix for the small font size on error message of the login form

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -588,7 +588,8 @@ div.lightbox {
     position: absolute;
     top: 50%;
     right: 0;
-    font-size: 7px;
+    font-size: 10px;
+    font-weight: 500;
     line-height: 1;
     margin-top: -6px;
     margin-right: -3px;
